editors/tree-sitter-jake/test/corpus/edge-cases.txt
================================================================================
@needs with comma separation
================================================================================

task coverage:
    @needs zig, kcov
    echo test

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      name: (identifier))
    (recipe_body
      (body_directive
        (body_needs_directive
          (identifier)
          (identifier)))
      (command_line
        (text)))))

================================================================================
@needs with hint and fallback combined
================================================================================

@needs tracy-capture "Install: brew install tracy" -> _install-tracy
task tracy:
    echo test

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_attribute
      (identifier)
      (string)
      (identifier))
    (recipe_header
      name: (identifier))
    (recipe_body
      (command_line
        (text)))))

================================================================================
@cd with path containing slash
================================================================================

task e2e:
    @cd tests/e2e
    echo test

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      name: (identifier))
    (recipe_body
      (body_directive
        (cd_directive
          path: (file_path)))
      (command_line
        (text)))))

================================================================================
@launch with file path
================================================================================

task open:
    @launch coverage-out/index.html

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      name: (identifier))
    (recipe_body
      (body_directive
        (launch_directive
          target: (file_path))))))

================================================================================
@cache with mixed glob and file patterns
================================================================================

task build:
    @cache src/**/*.zig build.zig.zon Jakefile
    zig build

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      name: (identifier))
    (recipe_body
      (body_directive
        (cache_directive
          path: (glob_pattern)
          path: (file_path)
          path: (file_path)))
      (command_line
        (text)))))

================================================================================
@watch with multiple patterns
================================================================================

task dev:
    @watch src/**/*.zig jake/*.jake Jakefile
    zig build

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      name: (identifier))
    (recipe_body
      (body_directive
        (watch_directive
          pattern: (glob_pattern)
          pattern: (glob_pattern)
          pattern: (file_path)))
      (command_line
        (text)))))

================================================================================
namespaced dependency
================================================================================

task deploy: [release:build, test:integration]
    ./deploy.sh

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      name: (identifier)
      (dependencies
        (dependency
          name: (dependency_name))
        (dependency
          name: (dependency_name))))
    (recipe_body
      (command_line
        (text)))))

================================================================================
condition with quoted path
================================================================================

task check:
    @if exists("src/main.zig")
        echo "found"
    @end

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      name: (identifier))
    (recipe_body
      (body_directive
        (if_directive
          condition: (condition_expression
            (condition_function
              arguments: (sequence
                (expression
                  (value
                    (string))))))))
      (command_line
        (text))
      (body_directive
        (end_directive)))))

================================================================================
complex @needs with multiple items
================================================================================

task profile:
    @needs samply zig make
    samply record ./app

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      name: (identifier))
    (recipe_body
      (body_directive
        (body_needs_directive
          (identifier)
          (identifier)
          (identifier)))
      (command_line
        (text)))))

================================================================================
@each with numbers
================================================================================

task sizes:
    @each 10 50 100
        echo "Size: {{item}}"
    @end

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      name: (identifier))
    (recipe_body
      (body_directive
        (each_directive
          (number)
          (number)
          (number)))
      (command_line
        (text)
        (interpolation
          (expression
            (value
              (identifier))))
        (text))
      (body_directive
        (end_directive)))))

================================================================================
backtick command with interpolation
================================================================================

GIT_SHA = `git rev-parse --short HEAD`

--------------------------------------------------------------------------------

(source_file
  (assignment
    name: (identifier)
    value: (expression
      (value
        (external_command
          (command_body))))))

================================================================================
triple backtick command
================================================================================

LONG_CMD = ```
git log --oneline
```

--------------------------------------------------------------------------------

(source_file
  (assignment
    name: (identifier)
    value: (expression
      (value
        (external_command
          (command_body))))))
