editors/tree-sitter-jake/test/corpus/statements.txt
================================================================================
empty file
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
variable assignment
================================================================================

VERSION = "1.0.0"

--------------------------------------------------------------------------------

(source_file
  (assignment
    name: (identifier)
    value: (expression
      (value
        (string)))))

================================================================================
variable with function call
================================================================================

BIN = local_bin("jake")

--------------------------------------------------------------------------------

(source_file
  (assignment
    name: (identifier)
    value: (expression
      (value
        (function_call
          name: (identifier)
          arguments: (sequence
            (expression
              (value
                (string)))))))))

================================================================================
simple import
================================================================================

@import "jake/build.jake"

--------------------------------------------------------------------------------

(source_file
  (import_statement
    path: (string)))

================================================================================
import with namespace
================================================================================

@import "jake/release.jake" as release

--------------------------------------------------------------------------------

(source_file
  (import_statement
    path: (string)
    namespace: (identifier)))

================================================================================
import rooted
================================================================================

@import "jake/build.jake" rooted

--------------------------------------------------------------------------------

(source_file
  (import_statement
    path: (string)))

================================================================================
import with namespace and rooted
================================================================================

@import "jake/release.jake" as release rooted

--------------------------------------------------------------------------------

(source_file
  (import_statement
    path: (string)
    namespace: (identifier)))

================================================================================
dotenv directive
================================================================================

@dotenv

--------------------------------------------------------------------------------

(source_file
  (global_directive
    (dotenv_directive)))

================================================================================
dotenv with quoted path
================================================================================

@dotenv ".env.local"

--------------------------------------------------------------------------------

(source_file
  (global_directive
    (dotenv_directive
      path: (string))))

================================================================================
require directive
================================================================================

@require API_KEY DATABASE_URL

--------------------------------------------------------------------------------

(source_file
  (global_directive
    (require_directive
      variable: (identifier)
      variable: (identifier))))

================================================================================
export directive
================================================================================

@export PATH

--------------------------------------------------------------------------------

(source_file
  (global_directive
    (export_directive
      name: (identifier))))

================================================================================
export with value
================================================================================

@export NODE_ENV = "production"

--------------------------------------------------------------------------------

(source_file
  (global_directive
    (export_directive
      name: (identifier)
      value: (expression
        (value
          (string))))))

================================================================================
default directive
================================================================================

@default
task build:
    make

--------------------------------------------------------------------------------

(source_file
  (global_directive
    (default_directive))
  (recipe
    (recipe_header
      name: (identifier))
    (recipe_body
      (command_line
        (text)))))

================================================================================
rooted directive
================================================================================

@rooted

--------------------------------------------------------------------------------

(source_file
  (global_directive
    (rooted_directive)))

================================================================================
comment
================================================================================

# This is a comment
task build:
    make

--------------------------------------------------------------------------------

(source_file
  (comment)
  (recipe
    (recipe_header
      name: (identifier))
    (recipe_body
      (command_line
        (text)))))
